<resources>
    <string name="app_name">LetsHome</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="listing_title_placeholder_text">The Cozy Cottage</string>
    <string name="listing_HostName_desc_text">Hosted by</string>
    <string name="listing_HostName_placeholder_text">John Doe</string>
    <string name="listing_location_placeholder_text">Hunza Valley, Northern Areas</string>
    <string name="listing_Rate_placeholder_text">4000</string>
    <string name="listing_Rate_desc_text">Pkr per night</string>
    <string name="contentDescription_listing_image">Listing Image</string>
    <string name="number_string">50</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"> Hello blank fragment &#032;</string>
    <string name="bookMessageText1"> Hi, I want to book &#032; </string>
    <string name="bookMessageText2"> &#032; for &#032; </string>
    <string name="bookMessageText3">  &#032; days and my arrival date is &#032; </string>


</resources>
