<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="180dp"
        android:layout_height="220dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:id="@+id/listingImage"
                android:contentDescription="@string/contentDescription_listing_image"
                android:scaleType="fitXY"
                android:src="@drawable/scenery_2_wide" />

            <TextView
                android:id="@+id/listingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/listingImage"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:text="@string/listing_title_placeholder_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/listingRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/listingTitle"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:text="@string/listing_Rate_placeholder_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_listingRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/listingRate"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/listingRate"
                android:text="@string/listing_Rate_desc_text"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/listingRatingbar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/listingRate"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:rating="5"
                android:numStars="5"
                android:progressTint="@color/colorPrimary"
                android:stepSize="0.1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_listingRate"
                android:layout_toRightOf="@id/listingRatingbar"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:text="@string/number_string"
                android:textSize="14sp"
                android:textStyle="bold"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>