<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="175dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:padding="10dp">

    <ImageView
        android:id="@+id/listingImage"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:contentDescription="@string/contentDescription_listing_image"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/listingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listingImage"
        android:layout_marginTop="4dp"
        android:text="@string/listing_title_placeholder_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/listingRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listingTitle"
        android:layout_marginTop="4dp"
        android:text="@string/listing_Rate_placeholder_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_listingRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/listingRate"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/listingRate"
        android:text="@string/listing_Rate_desc_text"
        android:textSize="18sp" />

    <RatingBar
        android:id="@+id/listingRatingbar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listingRate"
        android:layout_marginTop="6dp"
        android:numStars="5"
        android:progressTint="@color/colorPrimary"
        android:rating="5"
        android:stepSize="0.1" />

    <ImageView
        android:id="@+id/listing_views_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_eye_black_24dp"
        android:layout_toRightOf="@id/listingRatingbar"
        android:layout_below="@id/text_listingRate"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        />

    <TextView
        android:id="@+id/listingRatingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_listingRate"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/listing_views_icon"
        android:text="0"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>