<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".activities.HomeListingDetail">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/listing_detail_image"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:contentDescription="@string/contentDescription_listing_image"
            android:scaleType="fitXY"
            android:src="@drawable/scenery_2_wide" />

        <TextView
            android:id="@+id/listing_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listing_detail_image"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:text="@string/listing_title_placeholder_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_listing_detail_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listing_detail_title"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:text="@string/listing_Rate_desc_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/listing_detail_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_listing_detail_rate"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/text_listing_detail_rate"
            android:text="@string/listing_Rate_placeholder_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_listing_detail_HostName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_listing_detail_rate"
            android:layout_marginStart="6dp"
            android:layout_marginTop="20dp"
            android:text="@string/listing_HostName_desc_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/listingHostName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_listing_detail_HostName"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/text_listing_detail_HostName"
            android:text="@string/listing_HostName_placeholder_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/listing_detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_listing_detail_HostName"
            android:layout_marginStart="6dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp"
            android:text="@string/listing_location_placeholder_text"
            android:textSize="16sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/listing_host_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignBaseline="@id/text_listing_detail_rate"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/host_picture"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/listing_detail_location"
            android:background="#80CFCFCF" />

        <ImageView
            android:id="@+id/icon_people"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/listing_detail_location"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_people" />

        <ImageView
            android:id="@+id/icon_house"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/listing_detail_location"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/icon_people"
            android:src="@drawable/icon_house" />

        <ImageView
            android:id="@+id/icon_bed"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/listing_detail_location"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/icon_house"
            android:src="@drawable/icon_bed" />

        <ImageView
            android:id="@+id/icon_bathroom"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/listing_detail_location"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_toEndOf="@id/icon_bed"
            android:src="@drawable/icon_bathtub" />

        <TextView
            android:id="@+id/text_icon_guests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon_people"
            android:layout_marginStart="42dp"
            android:text="guests"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_icon_house"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_house"
            android:layout_marginStart="54dp"
            android:layout_toEndOf="@id/text_icon_guests"
            android:text="rooms"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_icon_bed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_bed"
            android:layout_marginStart="58dp"
            android:layout_toEndOf="@id/text_icon_house"
            android:text="beds"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_icon_bathroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_bathroom"
            android:layout_marginStart="46dp"
            android:layout_toEndOf="@id/text_icon_bed"
            android:text="bathrooms"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/listingGuests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_icon_guests"
            android:layout_marginStart="55dp"
            android:text="5"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/listingRooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_icon_house"
            android:layout_marginStart="79dp"
            android:layout_toEndOf="@id/listingGuests"
            android:text="3"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/listingBeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_icon_bed"
            android:layout_marginStart="79dp"
            android:layout_toEndOf="@id/listingRooms"
            android:text="4"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/listingBathrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_icon_bathroom"
            android:layout_marginStart="79dp"
            android:layout_toEndOf="@id/listingBeds"
            android:text="2"
            android:textSize="20sp" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/listingGuests"
            android:layout_marginTop="3dp"
            android:background="#80CFCFCF" />

        <RatingBar
            android:id="@+id/listing_detail_Ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:progressTint="@color/colorPrimary" />

        <Button
            android:id="@+id/listingRate_btn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@id/listing_detail_Ratingbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/colorPrimary"
            android:text="Rate"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>